2004-02-13  ujwal

	* Fixed "Kill Buffer" crash.

2004-02-13  fabian

	* Massive rewrite of drawing code. Some lost functionality needs to be recovered.

2004-02-05  ujwal

	* Selection is maintained after screen update unless text of selection has changed.

2004-02-03  ujwal

	* Not closing task if writing 0 bytes in PTYTask.m
	
2004-01-30  ujwal

	* Fixed a nil NSString problem with selecting background images in AddressBook.

2004-01-28  ujwal

    * Fixed problem resetting scrollbar at bottom on new output while scrolling.
	
	* Toggling of "Remap Delete Key" is handled by menu item and shortcut with 
	  cmd-Delete. This frees up opt-delete for applications that need it.

2004-01-27  ujwal

	* Significant improvement in display/layout speed for curses based applications 
	  by adjusting position only for graphical glyphs, and NOT for ALL GLYPHS on 
	  in the line.
	  
	* iTerm's text system is the only supported one now since it is now proven to 
	  work well and much faster than Cocoa's default text system. You can switch to 
	  Cocoa's built in text system at compile time. "Enforce character alignment" 
	  preference can now be turned off for fonts that have native support for 
	  graphical characters.
	  
	* Replaced a 10.3 only API in PTYSession.m with one that works on 10.2 as well.

2004-01-23  ujwal

	* Fixed some error handling for unknown tokens.

2004-01-22	ujwal

    * Added support for tab bonding, i.e. inout is sent to all tabs in 
      a window.
	* Middle mouse button pastes selection instead of pasting from clipboard.

2004-01-21	ujwal

	* Fixed some weird nib corruption in Preferences. Tab positioning 
	  was lost.

2004-01-20	ujwal

    * Added support for "Focus follows mouse".
	* Fixed ctrl-/ key to generate \037 and ctrl-? to generate \177.

2004-01-19	ujwal

    * Made cmd-W behave more consistently when Find and AddressBook windows 
      are key.
    * Added support for cmd-+ and cmd-- for increasing and decreasing font size 